--- a/biodata/biodata.html
+++ b/biodata/biodata.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="/css/icomoon.css">
 	<link rel="stylesheet" href="/css/style.css">
 	<link rel="stylesheet" href="/css/paralax.css">
-	<link rel="stylesheet" href="/css/pg.css">
+	<link rel="stylesheet" href="css/pg.css">
 
 	
 	  
