--- a/biodata/biodata.html
+++ b/biodata/biodata.html
@@ -70,7 +70,7 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav nav ml-auto">
-	          <li class="nav-item"><a href="/index.html" class="nav-link"><span>Home</span></a></li>
+	          <li class="nav-item"><a href="https://moniruldipu.github.io/moniruldipu/" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#photo-section" class="nav-link"><span>Photo</span></a></li>
 	          <li class="nav-item"><a href="#family-section" class="nav-link"><span>Family</span></a></li>
