--- a/biodata.html
+++ b/biodata.html
@@ -166,42 +166,42 @@
 			  <div class="row"> 
 				<div class="col-md-3">
 				<img src="photo/d (1).jpg" style="width:100%">
-				<img src="photo/d (2).jpg" style="width:100%">
+				<!-- <img src="photo/d (2).jpg" style="width:100%">
 				<img src="photo/d (3).jpg" style="width:100%">
 				<img src="photo/d (4).jpg" style="width:100%">
 				<img src="photo/d (5).jpg" style="width:100%">
 				<img src="photo/d (6).jpg" style="width:100%">
-				<img src="photo/d (28).jpg" style="width:100%">
+				<img src="photo/d (28).jpg" style="width:100%"> -->
 				
 				</div>
 				<div class="col-md-3">
 				<img src="photo/d (8).jpg" style="width:100%">
-				<img src="photo/d (9).jpg" style="width:100%">
+				<!-- <img src="photo/d (9).jpg" style="width:100%">
 				<img src="photo/d (10).jpg" style="width:100%">
 				<img src="photo/d (11).jpg" style="width:100%">
 				<img src="photo/d (12).jpg" style="width:100%">
 				<img src="photo/d (13).jpg" style="width:100%">
 				<img src="photo/d (7).jpg" style="width:100%">
-				<img src="photo/d (116).jpg" style="width:100%">
+				<img src="photo/d (116).jpg" style="width:100%"> -->
 				</div>  
 				<div class="col-md-3">
 				<img src="photo/d (14).jpg" style="width:100%">
-				<img src="photo/d (15).jpg" style="width:100%">
+				<!-- <img src="photo/d (15).jpg" style="width:100%">
 				<img src="photo/d (16).jpg" style="width:100%">
 				<img src="photo/d (17).jpg" style="width:100%">
 				<img src="photo/d (18).jpg" style="width:100%">
 				<img src="photo/d (19).jpg" style="width:100%">
-				<img src="photo/d (122).jpg" style="width:100%">
+				<img src="photo/d (122).jpg" style="width:100%"> -->
 
 				</div>
 				<div class="col-md-3"
 				<img src="photo/d (21).jpg" style="width:100%">
-				<img src="photo/d (22).jpg" style="width:100%">
+				<!-- <img src="photo/d (22).jpg" style="width:100%">
 				<img src="photo/d (23).jpg" style="width:100%">
 				<img src="photo/d (24).jpg" style="width:100%">
 				<img src="photo/d (25).jpg" style="width:100%">
 				<img src="photo/d (26).jpg" style="width:100%">
-				<img src="photo/d (20).jpg" style="width:100%">
+				<img src="photo/d (20).jpg" style="width:100%"> -->
 				</div>
 			  </div>
 			</section>
