--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Personalities</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Activites</span></a></li>
-	          <li class="nav-item"><a href="https://moniruldipu.github.io/biodata/" class="nav-link"><span>Biodata</span></a></li>
+	          <li class="nav-item"><a href="https://moniruldipu.github.io/biodata/" target="_blank" class="nav-link"><span>Biodata</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
