--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
     			</div>
     		
 				<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/covid19.PNG);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/Ubaya.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
 	    					<h3><a href="#projects-section">Directorate General of Health Services and offered through MuktoPaath on Coronavirus Disease ( COVID-19)
