--- a/index.html
+++ b/index.html
@@ -546,9 +546,9 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/covid19.PNG);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#projects-section">Directorate General of Health Services and offered through MuktoPaath on Coronavirus Disease ( COVID-19)
+	    					<h3><a href="#projects-section">Attended an International Student exchange program at University of Surabaya, Indonesia
 								</a></h3>
-	    					<span>Successfully completed an online course
+	    					<span>Successfully completed an one semester
 							</span>
 	    				</div>
     				</div>
