--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Personalities</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Activites</span></a></li>
-	          <li class="nav-item"><a href="https://moniruldipu.github.io/biodata/" target="_blank" class="nav-link"><span>Biodata</span></a></li>
+	          <!-- <li class="nav-item"><a href="https://moniruldipu.github.io/biodata/" target="_blank" class="nav-link"><span>Biodata</span></a></li> -->
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -132,17 +132,17 @@
 		            <!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p> -->
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span class="text-white">Name:</span> <span>Monirul Dipu</span></li>
-						<li class="d-flex"><span class="text-white">Date of birth:</span> <span>1st May 1994</span></li>
+						<li class="d-flex"><span class="text-white">Date of birth:</span> <span>1st May <span class="blur">1994</span></span></li>
 						<!-- Permanent address -->
-						<li class="d-flex"><span class="text-white">Permanent Address:</span> <span>207, 3/A, Prodhan Manzil, Gazaria, Munshiganj, Dhaka-1510</span></li>
+						<li class="d-flex"><span class="text-white">Permanent Address:</span> <span class="blur">207, 3/A, Prodhan Manzil, Gazaria, Munshiganj, Dhaka-1510</span></li>
 						<li class="d-flex"><span class="text-white">Language Known:</span> <span>English, Bangla, Hindi</span></li>
 						<li class="d-flex"><span class="text-white">Blood  Group:</span> <span>AB(+)</span></li>
 						<li class="d-flex"><span class="text-white">Height:</span> <span>5’.4”</span></li>
 						<li class="d-flex"><span class="text-white">Nationality:</span> <span>Bangladeshi</span></li>
 						
 
-		            	<li class="d-flex"><span class="text-white">Address:</span> <span>207, 3/A, Prodhan Manzil, Gazaria, Munshiganj, Dhaka-1510</span></li>
-		            	<li class="d-flex"><span class="text-white">Zip code:</span> <span>1510</span></li>
+		            	<li class="d-flex"><span class="text-white">Address:</span> <span class="blur">207, 3/A, Prodhan Manzil, Gazaria, Munshiganj, Dhaka-1510</span></li>
+		            	<li class="d-flex"><span class="text-white">Zip code:</span> <span class="blur">1510</span></li>
 		            	<li class="d-flex"><span class="text-white">Email:</span> <span>itzdipu@icloud.com</span></li>
 		            	<li class="d-flex"><span class="text-white">Phone: </span> <span>+880 16 1122 8125</span></li>
 		            </ul>
