--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					</p>
 		            <!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p> -->
 		            <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span class="text-white">Name:</span> <span>Monirul Dipu</span></li>
+		            	<li class="d-flex"><span class="text-white">Name:</span> <span>Monirul I. Dipu</span></li>
 						<li class="d-flex"><span class="text-white">Date of birth:</span> <span>1st May <span class="blur">1994</span></span></li>
 						<!-- Permanent address -->
 						<li class="d-flex"><span class="text-white">Permanent Address:</span> <span class="blur">207, 3/A, Prodhan Manzil, Gazaria, Munshiganj, Dhaka-1510</span></li>
