--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
           	<div class="text text-center">
           		<span class="subheading">Hey! I am</span>
 		  				<h1 class="text-white">Monirul Islam Dipu</h1>
-			  				<h2 class="text-white">I'm a 
+			  				<h2 class="text-white">I'm 
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Web Designer.", "Developer.", "IT Executive.", "Entrepreneur." ]'></span>
+								     data-rotate='[ "a Web Designer.","a Web Devoloper.", "an IT Executive.", "an Entrepreneur." ]'></span>
 								</h2>
 							</div>
             </div>
