--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
 							  <!-- resume view START -->
 							  
-								<img src="images/resume.png" >
+								<img src="images/resume.png" width="500" height="600" >
 			
 							  <!-- resume view END -->
 							  
