--- a/index.html
+++ b/index.html
@@ -258,7 +258,30 @@
 					<div class="col-md-9">
 					  <div id="page-1" class= "page one">
 						  <h2 class="heading">Education</h2>
+						 
 						  
+						  <div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">2023-2024</span>
+		    					<h2 class="text-white">MSc
+									</h2>
+								<span class="position text-white">University of South Wales (USW)</span>
+								<ul class="about-info mt-4 px-md-0 px-2">
+										<li class="d-flex"><span class="text-white">Region:</span> <span>Newport, Wales, United Kingdom</span></li>
+										<li class="d-flex"><span class="text-white">Faculty:</span> <span>Computing, Engineering and Science</span></li>
+										<li class="d-flex"><span class="text-white">Subject:</span> <span>Applied Cyber Security</span></li>
+										<!-- <li class="d-flex"><span class="text-white">Zip code:</span> <span>7323</span></li> -->
+										<li class="d-flex"><span class="text-white">CGPA :</span> <span>Running
+											</span></li>
+										<!-- <li class="d-flex"><span class="text-white">Phone: </span> <span>+234235235</span></li> -->
+									</ul>
+		    					<!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p> -->
+	    					</div>
+						</div>
+
 
 					    <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
