--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
 							  <!-- resume view START -->
 							  
-								<img src="images/resume.png..." width="500" height="700" >
+								<img href="https://github.com/moniruldipu/alldoc/raw/main/Resume_Md%20Manirul%20Islam.pdf" width="500" height="700" >
 			
 							  <!-- resume view END -->
 							  
