--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
 							  <!-- resume view START -->
 							  
-								<img href="https://github.com/moniruldipu/alldoc/raw/main/Resume_Md%20Manirul%20Islam.pdf" width="500" height="700" >
+								<img src="images/resume.png" width="500" height="700" >
 			
 							  <!-- resume view END -->
 							  
@@ -249,7 +249,7 @@
 				    <nav id="navi">
 					    <ul>
 					      <li><a href="#page-1">Education</a></li>
-					      <!-- <li><a href="#page-2">Experience</a></li> -->
+					      <li><a href="#page-2">Experience</a></li>
 					      <li><a href="#page-3">Skills</a></li>
 					      <!-- <li><a href="#page-4">Awards</a></li> -->
 					    </ul>
@@ -266,11 +266,11 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2023-2024</span>
-		    					<h2 class="text-white">MSc
+		    					<h2 class="text-white">MSc (Master's of Science)
 									</h2>
 								<span class="position text-white">University of South Wales (USW)</span>
 								<ul class="about-info mt-4 px-md-0 px-2">
-										<li class="d-flex"><span class="text-white">Region:</span> <span>Newport, Wales, United Kingdom</span></li>
+										<li class="d-flex"><span class="text-white">Region:</span> <span>Newport - NP20 2BP, Wales, United Kingdom</span></li>
 										<li class="d-flex"><span class="text-white">Faculty:</span> <span>Computing, Engineering and Science</span></li>
 										<li class="d-flex"><span class="text-white">Subject:</span> <span>Applied Cyber Security</span></li>
 										<!-- <li class="d-flex"><span class="text-white">Zip code:</span> <span>7323</span></li> -->
@@ -289,7 +289,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2015-2019</span>
-		    					<h2 class="text-white">BSc HONS, Bachelor of Science
+		    					<h2 class="text-white">BSc (Bachelor of Science)
 									</h2>
 								<span class="position text-white">Daffodil International University (DIU)</span>
 								<ul class="about-info mt-4 px-md-0 px-2">
@@ -311,7 +311,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2017-2018</span>
-		    					<h2 class="text-white">BSc HONS, Bachelor of Science
+		    					<h2 class="text-white">BSc (Bachelor of Science)
 									</h2>
 								<span class="position text-white">Universitas UBAYA ( University of Surabaya)</span>
 								<ul class="about-info mt-4 px-md-0 px-2">
