--- a/index.html
+++ b/index.html
@@ -740,6 +740,9 @@
   
   <script src="js/main.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4875257165488736"
+     crossorigin="anonymous"></script>
     
   </body>
 </html>
