--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "a Web Designer.","a Web Devoloper.", "an IT Executive.", "an Entrepreneur." ]'></span>
+								     data-rotate='[ "a Web Designer.","a Web Devoloper.", "an IT Executive.", "an Entrepreneur.","a Cyber Expert."]'></span>
 								</h2>
 							</div>
             </div>
