--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Personalities</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Activites</span></a></li>
 	          <!-- <li class="nav-item"><a href="https://moniruldipu.github.io/biodata/" target="_blank" class="nav-link"><span>Biodata</span></a></li> -->
+
+			  <li class="nav-item"><a href="call to bd.html" target="_blank" class="nav-link"><span>CAll 2 BD</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -147,6 +149,7 @@
 								     data-period="2000"
 								     data-rotate='[ "a Web Designer.","a Web Devoloper.", "an IT Executive.", "an Entrepreneur.","a Cyber Expert."]'></span>
 								</h2>
+								
 							</div>
             </div>
           </div>
